--- a/rtlamr2mqtt/Dockerfile
+++ b/rtlamr2mqtt/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:alpine as builder
+FROM golang:1.19-alpine3.17 as builder
 
 RUN apk add --no-cache --virtual build-deps alpine-sdk cmake git libusb-dev; \
     git clone --single-branch --progress git://git.osmocom.org/rtl-sdr.git /usr/local/rtl-sdr; \
@@ -11,10 +11,10 @@ RUN apk add --no-cache --virtual build-deps alpine-sdk cmake git libusb-dev; \
 RUN apk add --no-cache git go libc-dev && \
     mkdir -p /tmp/go && \
     export GOPATH=/tmp/go && \
-    go install -v github.com/bemasher/rtlamr@latest && \
+    go install -v github.com/bemasher/rtlamr@v0.9.3 && \
     cp /tmp/go/bin/* /usr/local/bin/
 
-FROM alpine:latest
+FROM alpine:3.17
 
 LABEL maintainer="aabishkar@gmail.com"
 
