--- a/rtl-sdr/Dockerfile.arm32v6
+++ b/rtl-sdr/Dockerfile.arm32v6
@@ -1,4 +1,4 @@
-FROM arm32v6/alpine:latest as builder
+FROM arm32v6/alpine:3.17 as builder
 
 RUN apk add --no-cache curl && \
     curl -L https://github.com/balena-io/qemu/releases/download/v3.0.0%2Bresin/qemu-3.0.0+resin-arm.tar.gz | tar zxvf - -C . && \
@@ -12,7 +12,7 @@ RUN apk add --no-cache alpine-sdk cmake git libusb-dev; \
     make; \
     make install
 
-FROM arm32v6/alpine:latest
+FROM arm32v6/alpine:3.17
 
 LABEL maintainer="aabishkar@gmail.com"
 
