--- a/rtlamr2mqtt/Dockerfile.arm32v6
+++ b/rtlamr2mqtt/Dockerfile.arm32v6
@@ -1,4 +1,8 @@
-FROM arm32v6/golang:alpine as builder
+FROM arm32v6/golang:1.19-alpine3.17 as builder
+
+RUN apk add --no-cache curl && \
+    curl -L https://github.com/balena-io/qemu/releases/download/v3.0.0%2Bresin/qemu-3.0.0+resin-arm.tar.gz | tar zxvf - -C . && \
+    mv qemu-3.0.0+resin-arm/qemu-arm-static /usr/bin
 
 RUN apk add --no-cache --virtual build-deps alpine-sdk cmake git libusb-dev; \
     git clone --single-branch --progress git://git.osmocom.org/rtl-sdr.git /usr/local/rtl-sdr; \
@@ -11,10 +15,10 @@ RUN apk add --no-cache --virtual build-deps alpine-sdk cmake git libusb-dev; \
 RUN apk add --no-cache git go libc-dev && \
     mkdir -p /tmp/go && \
     export GOPATH=/tmp/go && \
-    go install -v github.com/bemasher/rtlamr@latest && \
+    go install -v github.com/bemasher/rtlamr@v0.9.3 && \
     cp /tmp/go/bin/* /usr/local/bin/
 
-FROM arm32v6/alpine:latest
+FROM arm32v6/alpine:3.17
 
 LABEL maintainer="aabishkar@gmail.com"
 
